Updated as per feedback

--- a/fr_01/fr_01.tex
+++ b/fr_01/fr_01.tex
@@ -44,39 +44,44 @@
   \section{Introduction}
     \begin{frame}
       \begin{block}{Objectif}
-        Comparer les interrogatives utilisées par les locuteurs natifs (NS) contre non-natifs (NNS)
+        Comparer les interrogatives utilisées par les locuteurs natifs (LN) contre non-natifs (LNN)
       \end{block}
       \begin{block}{Question de recherche}
-        «Les locuteurs avancés du français diffèrent-ils des NS dans leurs usages des structures interrogatives?»
+        «Les locuteurs avancés du français diffèrent-ils des LN dans leurs usages des structures interrogatives?»
         \begin{itemize}
-          \item Si c'est le cas: Les NNS préfèrent-ils les structures plus formelles?
+          \item Si c'est le cas: Les LNN préfèrent-ils les structures plus formelles?
         \end{itemize}
       \end{block}
     \end{frame}
 
     \begin{frame}
-      \begin{block}{Attentes}
-        Il y aura une différence entre les NS et les NNS, et
+      \begin{block}{Hypothèses}
+        Il y aura une différence entre les LN et les LNN, et
         \begin{itemize}
-          \item Les NNS préféreront les structures plus formelles
+          \item Les LNN préféreront les structures plus formelles
         \end{itemize}
-        C'est ce que Dewaele (1992) a trouvé pour ce qui concerne l'effacement du \emph{ne} parmi des étudiants flamands
+        C'est ce que Dewaele (1992) a trouvé pour l'effacement du \emph{ne} parmi des étudiants flamands
       \end{block}
     \end{frame}
 
     \begin{frame}{Variables}
       \begin{block}{Deux formes générales}
         \begin{itemize}
-          \item Interrogatives totales (YNQ): Cela cherche une décision
-          \item Interrogatives partielles (WHQ): Cela cherche des informations
+          \item Interrogatives totales (IT): Cela cherche une décision
+          \item Interrogatives partielles (IP): Cela cherche des informations
         \end{itemize}
       \end{block}
-      \begin{columns}
-        \column{0.5\linewidth}
-          \includegraphics[scale=0.35]{interrogatives_totales.jpg}
-        \column{0.5\linewidth}
-          \includegraphics[scale=0.35]{interrogatives_partielles.jpg}
-      \end{columns}
+    \end{frame}
+
+    \begin{frame}{Variables}
+      \begin{block}{}
+        Interrogatives totales
+      \end{block}
+      \includegraphics[scale=0.5]{interrogatives_totales.jpg}
+      \begin{block}{}
+        Interrogatives partielles
+      \end{block}
+      \includegraphics[scale=0.5]{interrogatives_partielles.jpg}
     \end{frame}
 
     \begin{frame}{Variabilité}
@@ -89,6 +94,7 @@
           \item Lyster (1996) a trouvé l'inverse
           \item Il a considéré des inversions les structures avec \emph{-ti}:
           \item «Je peux-ti t'aider?»
+          \item (45 \emph{-ti}, 122 inverties, 129 non-inverties)
         \end{itemize}
       \end{block}
     \end{frame}
@@ -96,10 +102,10 @@
     \begin{frame}{Facteurs prescriptifs}
       \begin{block}{Une hiérarchie de formalité (Grevisse 1980; Wagner \& Pinchon 1962)}
         \begin{itemize}
-          \item Style formel: [V-CL], [QV-CL], [QV-NP] (l'inversion)
+          \item Style formel: [V-CL], [QV-CL], [QVGN] (l'inversion)
           \item Neutre mais inapproprié dans l'écriture: [ESV], [QESV] (\emph{est-ce que})
           \item Familier: [SV], [SVQ]
-          \item Classe ouvrière et «incorrect»: [QSV]
+          \item Encore plus familier: [QSV]
         \end{itemize}
       \end{block}
       \begin{block}{Il y a des exceptions}
@@ -110,10 +116,10 @@
     \begin{frame}{Facteurs descriptifs}
       \begin{block}{Dans Coveney (1996)}
         \begin{itemize}
-          \item Les YNQ: C'est des facteurs pragmatiques
+          \item Les IT: C'est des facteurs pragmatiques
           \item Les ESV: Quand on attend une réponse
           \item Les SVQ: Quand le sujet ou le verbe porte moins d'informations
-          \item Les QSV: C'est les hommes qui les préfèrent plus que les femmes
+          \item Les QSV: Ce sont les hommes qui les préfèrent plus que les femmes
         \end{itemize}
       \end{block}
       \begin{alertblock}{}
@@ -126,7 +132,7 @@
       \begin{block}{}
         \begin{itemize}
           \item $N = 20$
-          \item 5 NS, 15 NNS
+          \item 5 LN, 15 LNN
           \item 9 femmes, 11 hommes
           \item âgés de 20 à 60 ans
         \end{itemize}
@@ -137,14 +143,14 @@
     \end{frame}
 
     \begin{frame}{Collecte de données}
-      \begin{block}{Questionnaires pour obtenir des informations biographiques}
+      \begin{block}{Questionnaires pour obtenir des informations diastratiques}
         Genre, âge, temps passé en France, autres langues, profession, etc.
       \end{block}
       \begin{block}{Interviews}
         Regroupés en pairs
         \begin{itemize}
           \item Moitié les mêmes genres, moitié mixtes
-          \item Deux séances de une heure chacune
+          \item Deux séances d'une heure chacune
           \item Un participant a interviewé l'autre pendant 15 minutes avant d'inverser les rôles
         \end{itemize}
       \end{block}
@@ -153,7 +159,7 @@
       \end{block}
     \end{frame}
 
-  \section{Resultats}
+  \section{Résultats}
     \begin{frame}[t]{Comparaison avec des études antérieures}
       \begin{columns}
         \column{0.5\linewidth}
@@ -166,9 +172,9 @@
     \begin{frame}{Pourquoi plus d'inversion?}
       \begin{block}{Une différence de contexte}
         \begin{itemize}
-          \item Coveney: A un camp de vacances
-          \item Gadet: Des amis sur le téléphone
-          \item Dewaele: A une \emph{université}
+          \item Coveney: À une colonie de vacances
+          \item Gadet: Des amis au téléphone
+          \item Dewaele: Dans une \emph{université}
         \end{itemize}
       \end{block}
     \end{frame}
@@ -176,7 +182,7 @@
     \begin{frame}[t]{Facteurs}
       \begin{columns}
         \column{0.5\linewidth}
-          \begin{block}{Differences selon les variables biographiques}
+          \begin{block}{Différences selon les variables diastratiques}
             Aucune signification pour:
             \begin{itemize}
               \item l'âge,
@@ -218,32 +224,32 @@
               Différences selon les temps
             \end{block}
             \begin{tabular}{l r}
-              \emph{Temps} & \emph{\% des inversions} \\
+              \emph{Temps} & \emph{\% des interrogatives} \\
               \hline
               Présent      & 78,2 \\
               Passé        & 16,0 \\
               Conditionnel & \\
-              ou future    & 5,7
+              ou futur     & 5,7
             \end{tabular}
           \end{minipage}
       \end{columns}
-      \begin{block}{Mais...}
-        On ne connaît pas si cela représente simplement les verbes et les temps les plus fréquents
+      \begin{block}{}
+        Parmi les inversions clitiques: 84,2\% des structures étaient au présent
       \end{block}
     \end{frame}
 
     \begin{frame}{Facteurs pragmatiques}
       \begin{block}{}
-        Presque toutes les inversions [V-CL] et [QV-CL] ont impliqué de nouveaux sujets (95\%)
+        Presque toutes les inversions [V-CL] et [QV-CL] ont introduit de nouveaux sujets (95\%)
       \end{block}
       \includegraphics[scale=0.6]{inversion.jpg}
     \end{frame}
 
-    \begin{frame}{Facteurs langagiers}
+    \begin{frame}{Facteurs linguistiques}
       \begin{block}{}
         \begin{itemize}
-          \item Les NNS évitent les [QSV] mais pas les [SV]
-          \item Les NNS utilisent plus de [QV-CL]
+          \item Les LNN évitent les [QSV] mais pas les [SV]
+          \item Les LNN utilisent plus de [QV-CL]
         \end{itemize}
       \end{block}
       \begin{block}{Selon Dewaele, c'est une influence possible de l'anglais}
@@ -256,11 +262,11 @@
 
   \section{Conclusion}
     \begin{frame}{Significations et remarques}
-      \begin{block}{Pour les WHQ uniquement}
-        Les NNS utilisent des variantes plus formelles que les NS
+      \begin{block}{Pour les IP uniquement}
+        Les LNN utilisent des variantes plus formelles que les LN
       \end{block}
       \begin{block}{}
-        Les inversions étaient plus fréquent que dans les études antérieures
+        Les inversions étaient plus fréquentes que dans les études antérieures chez les LNN et les LN
       \end{block}
     \end{frame}
 \end{document}
