Cleaned some typos and formatting

--- a/fr_01/fr_01.tex
+++ b/fr_01/fr_01.tex
@@ -65,29 +65,17 @@
     \end{frame}
 
     \begin{frame}{Variables}
-      \begin{block}{Deux formes générales}
-        \begin{itemize}
-          \item Interrogatives totales (IT): Cela cherche une décision
-          \item Interrogatives partielles (IP): Cela cherche des informations
-        \end{itemize}
-      \end{block}
-    \end{frame}
-
-    \begin{frame}{Variables}
       \begin{block}{}
-        Interrogatives totales
+        Interrogatives totales (IT): Cela cherche une décision
       \end{block}
       \includegraphics[scale=0.5]{interrogatives_totales.jpg}
       \begin{block}{}
-        Interrogatives partielles
+        Interrogatives partielles (IP): Cela cherche des informations
       \end{block}
       \includegraphics[scale=0.5]{interrogatives_partielles.jpg}
     \end{frame}
 
     \begin{frame}{Variabilité}
-      \begin{block}{}
-        Coveney (1996) a trouvé un éventail de variabilité dans 10 corpus
-      \end{block}
       \begin{block}{Au Québec}
         Lightbrown (1980) et Lightbrown \& d'Anglejean (1985) ont trouvé une préférence pour les structures non-inverties
         \begin{itemize}
@@ -117,14 +105,11 @@
       \begin{block}{Dans Coveney (1996)}
         \begin{itemize}
           \item Les IT: C'est des facteurs pragmatiques
-          \item Les ESV: Quand on attend une réponse
-          \item Les SVQ: Quand le sujet ou le verbe porte moins d'informations
-          \item Les QSV: Ce sont les hommes qui les préfèrent plus que les femmes
+          \item Les [ESV]: Quand on attend une réponse
+          \item Les [SVQ]: Quand le sujet ou le verbe porte moins d'informations
+          \item Les [QSV]: Ce sont les hommes qui les préfèrent plus que les femmes
         \end{itemize}
       \end{block}
-      \begin{alertblock}{}
-        Les interrogatives dans Coveney (1996) avaient plus de fonctions
-      \end{alertblock}
     \end{frame}
 
   \section{Méthode}
@@ -193,7 +178,7 @@
             \end{itemize}
             Une signification:
             \begin{itemize}
-              \item Locuteurs natifs contre non-natifs pour les interrogatives partielles
+              \item Locuteurs natifs contre non-natifs pour les IP
             \end{itemize}
           \end{block}
         \column{0.5\linewidth}
@@ -201,7 +186,7 @@
       \end{columns}
     \end{frame}
 
-    \begin{frame}[t]{Facteurs verbaux et de temporels}
+    \begin{frame}[t]{Facteurs verbaux et temporels}
       \begin{columns}
         \column{0.47\linewidth}
           \begin{minipage}[t][0.6\textheight]{\linewidth}
@@ -260,9 +245,9 @@
       \end{block}
     \end{frame}
 
-  \section{Conclusion}
+  \section{Conclusions}
     \begin{frame}{Significations et remarques}
-      \begin{block}{Pour les IP uniquement}
+      \begin{block}{Signification pour les IP uniquement}
         Les LNN utilisent des variantes plus formelles que les LN
       \end{block}
       \begin{block}{}
