--- a/race_ethnicity02/duboishorvath.tex
+++ b/race_ethnicity02/duboishorvath.tex
@@ -44,11 +44,15 @@
     \begin{frame}{Cajun Vernacular English (CVE)}
       \begin{definition}
         A variety ``spoken by French/Enlgish bilinguals and, to some extent, English monolinguals living in French-dominant rural areas of south Louisiana.''
+        \begin{itemize}
+          \item French was banned as a language for education in 1921 and subsequently stigmatized
+        \end{itemize}
       \end{definition}
       \begin{block}{An ethnolect?}
         ``We have in previous articles referred to \alert{Cajun} English as an \alert{ethnolect}, and in this article we have chosen to call it a \emph{vernacular} (after Gillian Sankoff’s suggestion at NWAV 29).
-        The sets of key words found in many dictionary definitions for the word \emph{vernacular} are (1) originating, native, indigenous and (2) place, land, or country.
-        What is attractive about the term vernacular is the focus on `originating in a place where it is used' because this succinctly captures the point we are trying to make about the origins of Cajun English.'' [bold mine]
+        % The sets of key words found in many dictionary definitions for the word \emph{vernacular} are (1) originating, native, indigenous and (2) place, land, or country.
+        % What is attractive about the term vernacular is the focus on `originating in a place where it is used' because this succinctly captures the point we are trying to make about the origins of Cajun English.''
+        [bold mine]
       \end{block}
     \end{frame}
 
@@ -67,7 +71,7 @@
         \includegraphics[scale=0.65]{variables.jpg}
       \end{center}
       \begin{block}{}
-        Found in SE and AAE, but not expected at the same rates
+        Found in Southern English (SE) and African-American English (AAE)
       \end{block}
     \end{frame}
 
@@ -88,7 +92,7 @@
       \begin{block}{NORMs mostly}
         16 young (b.~1960s) and old (b.~before 1930) men who
         \begin{itemize}
-          \item speak or don't speak French,
+          \item spoke or didn't speak French as their first language,
           \item are or are not more educated, and
           \item who have lived in the same parish all their lives
         \end{itemize}
@@ -135,11 +139,11 @@
       \end{center}
     \end{frame}
 
-    \begin{frame}{\emph{was} Leveling}
-      \begin{center}
-        \includegraphics[scale=0.5]{was_leveling.jpg}
-      \end{center}
-    \end{frame}
+    % \begin{frame}{\emph{was} Leveling}
+    %   \begin{center}
+    %     \includegraphics[scale=0.5]{was_leveling.jpg}
+    %   \end{center}
+    % \end{frame}
 
     \begin{frame}{Final consonant deletion, a Cajun-specific variable}
       \begin{center}
@@ -147,17 +151,30 @@
       \end{center}
     \end{frame}
 
-  \section{Discussion}
-    \begin{frame}{Southern English relationship}
-      \begin{block}{}
-        \begin{itemize}
+  \section{Conclusions}
+    \begin{frame}{Links to other languages/varieties}
+      \begin{block}{Southern English relationship}
+        \begin{enumerate}
           \item Early CVE cannot be derived from SE
           \item Later CVE influenced by greater access to SE from WWII on
-        \end{itemize}
+        \end{enumerate}
+      \end{block}
+      \begin{block}{French relationship}
+        \begin{enumerate}
+          \setcounter{enumi}{2}
+          \item Influenced by transfer early on, but it didn't persist
+        \end{enumerate}
       \end{block}
     \end{frame}
 
-    \begin{frame}{French relationship}
-      % Interference would have disappeared after a generation
+  \section{Discussion}
+    \begin{frame}
+      \begin{block}{}
+        \begin{enumerate}
+          \item Do these conclusions truly fit the data? Can the data actually lead us to draw conclusions of this sort?
+          \item To what extent does it make sense to describe CVE as an ethnolect (linked to an ethnicity) vs a vernacular (linked to a place in this case)?
+          \item What does this data say about how Cajuns relate to other Southerners or even African-Americans in terms of identity?
+        \end{enumerate}
+      \end{block}
     \end{frame}
 \end{document}
