Decent progress on the intro

--- a/fr02/passecompose.tex
+++ b/fr02/passecompose.tex
@@ -14,8 +14,55 @@
   % Document information
   \author{Joshua McNeill}
   \date{\today}
-  \title{}
+  \title{Les auxiliaires pour le passé composé en français louisianais}
+
+  % Custom commands
+  \newcommand{\lexi}[1]{\textit{#1}}
 
 \begin{document}
+  \maketitle
+  \section{Introduction}
+    Dans l'état de la Louisiane aux États-Unis, il y avait environ 142.000 francophones en 2010, 3,45\% de la population \parencite{mla_louisiana_nodate}.
+    Ce nombre représente une forte diminution des locuteurs du français dans l'État.
+    Quarante ans avant, il y en avait environ 570.000, 15,83\% de la population \parencite[p.~159]{us_department_of_commerce_1970_1973}.
+    Encore 31 ans avant, en 1939, \textcite{smith_influence_1939} ont deviné que 90\% de la population du sud de la Louisiane parlait français (p.~198).
+    C'est-à-dire que le français a été la langue majoritaire de l'État, mais au cours d'un siècle, il est devenu une langue minoritaire.
+    Or, cette variété existe toujours avec ses propres caractéristiques.
 
+    L'une des caractéristiques qui distingue cette variété que l'on peut appeler le français louisianais\footnote{Il s'appelle parfois le français cadien, aussi.} est son système pronominal.
+    Pour le pronom sujet de la troisième personne du pluriel, en plus d'\lexi{ils}, il y a également \lexi{eux}, \lexi{eux autres} et \lexi{ça} (\citeauthor{brown_pronominal_1988}, \citeyear[pp.~152-153]{brown_pronominal_1988}; \citeauthor{byers_defining_1988}, \citeyear[pp.~88-92]{byers_defining_1988}; \citeauthor{rottet_language_1995}, \citeyear[p.~175]{rottet_language_1995}; \citeauthor{smith_morphosyntactic_1994}, \citeyear[p.~60]{smith_morphosyntactic_1994}).
+    Le français lousianais a aussi un pronom sujet qui indique explicitement la deuxième personne du pluriel: \lexi{vous autres} \parencite[p.~175]{rottet_language_1995}.
+
+    Encore un autre trait grammatical que l'on peut exprimer explicitement en français louisianais est l'aspect progressif.
+    Cet aspect est exprimé par la construction \lexi{être après} + un verbe à l'infinitif, tel que dans l'Exemple \ref{ex:progressif}, qui veut dire qu'il est en train de parler.
+    C'est également possible d'exprimer l'aspect progressif au passé en conjuguant le verbe \lexi{être} à l'imparfait \parencite[p.~102]{papen_structural_1997}.
+
+    \begin{enumerate}
+      \item \label{ex:progressif} Il est après parler.
+    \end{enumerate}
+
+    Les caractéristiques décrites dessus sont intéressantes à part entière, mais celle dont nous nous occupons ici, c'est le verbe auxiliaire dans le passé composé.
+    Selon \textcite{luscher_emplois_1996}, le passé composé peut indique le temps du passé avec soit l'aspect perfectif soit l'aspect accompli (p.~192).
+    En français louisianais, le sens est le même, mais la construction diffère.
+    En français standard, on emploie d'habitude l'auxiliaire \lexi{avoir} suivi d'un participe du passé.
+    On emploie également l'auxiliaire \lexi{être} suivi d'un participe du passé si le verbe signifie un genre de mouvement ou de changement ou si le verbe est réfléchi.
+    Ces deux auxiliares sont possible en français louisianais, aussi, mais \lexi{être} n'est pas forcément utilisé par tous les locuteurs.
+
+    % Previous work on variation in the auxiliary verb
+      % In Louisiana
+      % In other regions
+    % Variable and research question
+  \section{Méthode}
+    % Corpus
+    % Data collection and coding
+    % Statistics
+  \section{Résultats}
+    % Overall frequencies
+    % Social factors (qualitative)
+      % Age
+      % 1st language
+    % Linguistic factors
+      % Reflexive vs verb
+  \section{Discussion}
+  \printbibliography
 \end{document}
