Finished intro, started on methods

--- a/fr02/passecompose.tex
+++ b/fr02/passecompose.tex
@@ -18,6 +18,8 @@
 
   % Custom commands
   \newcommand{\lexi}[1]{\textit{#1}}
+  \newcommand{\orth}[1]{$\langle$#1$\rangle$}
+  \newcommand{\name}[1]{\textsc{#1}}
 
 \begin{document}
   \maketitle
@@ -30,7 +32,7 @@
     Or, cette variété existe toujours avec ses propres caractéristiques.
 
     L'une des caractéristiques qui distingue cette variété que l'on peut appeler le français louisianais\footnote{Il s'appelle parfois le français cadien, aussi.} est son système pronominal.
-    Pour le pronom sujet de la troisième personne du pluriel, en plus d'\lexi{ils}, il y a également \lexi{eux}, \lexi{eux autres} et \lexi{ça} (\citeauthor{brown_pronominal_1988}, \citeyear[pp.~152-153]{brown_pronominal_1988}; \citeauthor{byers_defining_1988}, \citeyear[pp.~88-92]{byers_defining_1988}; \citeauthor{rottet_language_1995}, \citeyear[p.~175]{rottet_language_1995}; \citeauthor{smith_morphosyntactic_1994}, \citeyear[p.~60]{smith_morphosyntactic_1994}).
+    Pour le pronom sujet de la troisième personne du pluriel, en plus d'\lexi{ils}, il y a également \lexi{eux}, \lexi{eux autres} et \lexi{ça} (\citeauthor{brown_pronominal_1988}, \citeyear[pp.~152-153]{brown_pronominal_1988}; \citeauthor{byers_defining_1988}, \citeyear[pp.~88-92]{byers_defining_1988}; \citeauthor{dajko_ethnic_2009}, \citeyear[p.~144]{dajko_ethnic_2009}; \citeauthor{rottet_language_1995}, \citeyear[p.~175]{rottet_language_1995}; \citeauthor{smith_morphosyntactic_1994}, \citeyear[p.~60]{smith_morphosyntactic_1994}).
     Le français lousianais a aussi un pronom sujet qui indique explicitement la deuxième personne du pluriel: \lexi{vous autres} \parencite[p.~175]{rottet_language_1995}.
 
     Encore un autre trait grammatical que l'on peut exprimer explicitement en français louisianais est l'aspect progressif.
@@ -41,18 +43,82 @@
       \item \label{ex:progressif} Il est après parler.
     \end{enumerate}
 
-    Les caractéristiques décrites dessus sont intéressantes à part entière, mais celle dont nous nous occupons ici, c'est le verbe auxiliaire dans le passé composé.
+    Les caractéristiques décrites dessus sont intéressantes à part entière, mais celle dont nous nous occupons ici, c'est la forme du verbe auxiliaire dans le passé composé.
     Selon \textcite{luscher_emplois_1996}, le passé composé peut indique le temps du passé avec soit l'aspect perfectif soit l'aspect accompli (p.~192).
     En français louisianais, le sens est le même, mais la construction diffère.
     En français standard, on emploie d'habitude l'auxiliaire \lexi{avoir} suivi d'un participe du passé.
     On emploie également l'auxiliaire \lexi{être} suivi d'un participe du passé si le verbe signifie un genre de mouvement ou de changement ou si le verbe est réfléchi.
     Ces deux auxiliares sont possible en français louisianais, aussi, mais \lexi{être} n'est pas forcément utilisé par tous les locuteurs.
 
-    % Previous work on variation in the auxiliary verb
-      % In Louisiana
-      % In other regions
-    % Variable and research question
+    \textcite{papen_structural_1997} ont donné un esquisse du français parlé aux paroisses de Lafourche et Terrebonne au sud-est de la Louisiane.
+    L'usage dans ces régions a différé de l'usage standard en ce que seuls les aînés employaient le verbe \lexi{être} comme auxiliare.
+    Parmi ce groupe, les contraintes ont également différé du français standard.
+    En dépit du fait qu'ils ont produit \lexi{être} pour les verbes intransitifs de mouvement, c'était toujours \lexi{avoir} pour les verbes réfléchis, comme dans leurs données reproduites dans les Exemples \ref{ex:pc_baigner} et \ref{ex:pc_assir} \parencite[p.~101]{papen_structural_1997}.
+    Malheureusement, cette étude était plutôt descriptive, donc on n'a pas accès aux figures quantitatives pour ces affirmations.
+
+    \begin{enumerate}
+      \setcounter{enumi}{1}
+      \item \label{ex:pc_baigner} On s'a baigné.
+      \item \label{ex:pc_assir} Eusse\footnote{L'orthographe \orth{eusse} représente la prononciation typique d'\lexi{eux}: [øs]} s'a assis.
+    \end{enumerate}
+
+    \textcite{byers_defining_1988} a fourni une étude qui a traité la même structure plus quantitativement.
+    Il ne s'est pas concentré sur une région dans l'État, mais tout l'État, avec des informateurs de plusieurs paroisses \parencite[p.~47]{byers_defining_1988}.
+    L'échantillon n'était pas compensé selon la région, mais il a pu obtenir des indications de ce que l'on peut s'attendre.
+    Dans son étude pilote, il a décrit l'usage des auxiliaires pour le passé composé en variation libre \parencite[pp.~50-51]{byers_defining_1988}.
+    Cependant, dans son étude principale, il a recueilli des données qui suggère que ce n'est pas exactement de la variation libre.
+
+    La première tâche des informateurs était de traduire des phrase de l'anglais au français comme ils le parlaient d'habitude.
+    Les quatre phrases dans les Exemples \ref{ex:pc_went} à \ref{ex:pc_gotup} avaient l'effet de solliciter le passé composé \parencite[p.~198]{byers_defining_1988}.
+    Les verbes employés étaient \lexi{venir} pour \ref{ex:pc_came1} et \ref{ex:pc_came2}, \lexi{se lever} pour \ref{ex:pc_gotup} et \lexi{retourner} pour \ref{ex:pc_returned}.
+    Quelques locuteurs ont utilisé \lexi{être} comme auxiliaire pour \lexi{venir} et \lexi{se lever}, mais pas tous les locuteurs.
+    Les caractéristiques de ces locuteurs n'étaient pas similaires non plus.
+    Ce groupe a inclus des hommes et des femmes, des jeunes et des aînés (de 32 ans à 93 ans) et des personnes de différentes paroisses.
+    Cela rend difficile l'interprétation de ce résultat.
+    Le mot \lexi{retourner} était plus simple puisque tout le monde a employé l'auxiliaire \lexi{avoir}.
+    Enfin, pour \lexi{went}, tout informateur a produit le participe pour \lexi{être} avec \lexi{avoir} comme auxiliaire, c'est-à-dire \lexi{j'ai été} au lieu du standard \lexi{je suis allé(e)} \parencite[pp.~84-85]{byers_defining_1988}.
+
+    \begin{enumerate}
+      \setcounter{enumi}{2}
+      \item \label{ex:pc_went} I went to the store yesterday.
+      \item \label{ex:pc_came1} She came as soon as you called.
+      \item \label{ex:pc_came2} I came as soon as you called.
+      \item \label{ex:pc_returned} I returned to work yesterday.
+      \item \label{ex:pc_gotup} He got up (from bed).
+    \end{enumerate}
+
+    Ce qui était évident dans l'étude de Byers, c'est qu'il y a de la variation dans l'auxiliaire pour le passé composé en français louisianais, et cette variation ne coïncide pas avec la variation du français standard.
+    De plus, les jugements pour ce que l'on devrait dire parmis les Louisianais ne coïncident pas avec la francophonie en général non plus.
+    Byers ont obtenu des jugements en présentant des paires de syntagmes verbaux où l'un a \lexi{avoir} comme auxiliaire et l'autre \lexi{être} comme auxiliaire.
+    Pour \lexi{venir}, il a découvert que la moitié des informateurs qui ont produit \lexi{être} pour l'auxiliaire ont mieux jugé \lexi{avoir}.
+    Le même résultat s'est réalisé pour les informateurs qui ont produit \lexi{avoir}: la moitié ont mieux jugé \lexi{être} \parencite[pp.~128-132]{byers_defining_1988}.
+    Il se peut que ces jugements inattendus découlent de la situation formelle ou autre chose, mais il est douteux que l'on retrouverait les mêmes jugements ailleurs.
+
+    L'usage d'\lexi{avoir} pour l'auxiliaire du passé composé ne se réstreint pas à la Louisiane.
+    \textcite{sankoff_linguistic_1978} ont examiné la variation entre \lexi{avoir} et \lexi{être} à Montréal, aussi.
+    Leur objectif primaire était de développer une mesure sociale plus robuste que la classe socioéconomique, ce qu'ils ont appelé le marché linguistique, mais l'important est que l'on pouvait étudier un tel phénomène parce que les manuels n'expliquait pas bien ce qui se passait en réalité.
+    \name{King} et \name{Nadasdi} (2005) ont également effectué une étude qui portait sur la variation des auxiliaires en français acadien, parlé dans les Provinces maritimes.
+    Ils ont trouvé que \lexi{être} est quasiment absent dans cette variété, remplacé par \lexi{avoir} dans tous les cas sauf parfois avec les verbes \lexi{naître} et \lexi{mourir} \parencite[\name{King} et \name{Nadasdi}, 2005, cité dans][p.~325]{comeau_new_2012}.
+
+    L'objectif de l'étude actuelle, alors, c'est d'analyser la variation entre les auxiliaires \lexi{avoir} et \lexi{être} au passé composé en Louisiane.
+    La question de recherche est spécifiquement:
+
+    \begin{itemize}
+      \item[QR] Quels sont les facteurs sociaux et linguistiques qui influencent la réalisation de l'auxiliaire comme \lexi{avoir} ou \lexi{être} au passé composé en français louisianais?
+    \end{itemize}
+
   \section{Méthode}
+    Le corpus utilisé ici a été construit à partir des interviews faits en 2019 sur Skype avec des locuteurs du français louisianais.
+    Les interviews ont duré environ 30 minutes chacun.
+    Les thèmes des discussions ont concerné les villes d'origine et les résidents de ces villes.
+    Deux des participants, Fitz et Ward,\footnote{Les noms ont été anonymisés.} était relativement jeunes: 34 ans et 47 ans.
+    Ces deux parlaient français comme langue seconde, mais il s'intéressaient à imiter la variété parlée dans l'État.
+    Ils habitaient à Bâton-Rouge et à la Nouvelle-Orléans, respectivement, mais Fitz avait souvent passé du temps dans la campagne, et Ward est récemment déménagé à la ville d'un petit village qui s'appelle Gramercy.
+    Les deux autres participants, Coulson et Talbot, étaient plus vieux: 68 ans et 71 ans.
+    Leur langue natale étaient le français, les deux.
+    Coulson a grandi dans un petit village au nord-ouest de Lafayette, mais il habitait à Bâton-Rouge depuis des années au moment de l'interview.
+    Talbot habitait au sud-est de Lafayette dans un village appelé Youngsville.
+    Il avait voyagé dans plusieurs parties du monde, mais la zone autour de Lafayette avait toujours été sa résidence principale.
     % Corpus
     % Data collection and coding
     % Statistics
